--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
                 integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Munkahelyi adatbázis</title>
 
         <link rel="stylesheet" href="style.css">
 
