--- a/public/pages/car-list.html
+++ b/public/pages/car-list.html
@@ -21,7 +21,8 @@
                 <table>
                         <thead>
                                 <video id="video" autoplay muted loop width="500"
-                                        src="3066463-uhd_4096_2160_24fps.mp4.crdownload"></video>
+                                        src="3066463-uhd_4096_2160_24fps.mp4.crdownload">
+                                </video>
                         </thead>
                         <tbody>
                                 <button onclick="playVideo()">Lejátszás</button>
