--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,20 +1,9 @@
-<ul>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(0, 84, 252);" href="#" onclick="loadUserList()">Felhasználók</a>
-        </li>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(80, 139, 255);" href="#" onclick="loadUserForm()">Új felhasználó</a>
-        </li>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(132, 173, 254);" href="#" onclick="loadCarList()">Céges autók listája</a>
-        </li>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(178, 201, 247);" href="#" onclick="loadCarForm()">Új céges autó</a>
-        </li>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(234, 241, 255);" href="#" onclick="loadStats()">Statisztika</a>
-        </li>
-        <li>
-                <a style="padding: 5px; border: 5px solid rgb(249, 0, 0);" href="#" onclick="loadWorkplaceSafety()">Munkavédelmi szabályzat</a>
-        </li>
-</ul>
+<nav>
+        <a href="#" onclick="loadUserList()">Felhasználók</a>
+        <a href="#" onclick="loadUserForm()">Új felhasználó</a>
+        <a href="#" onclick="loadCarList()">Céges autók listája</a>
+        <a href="#" onclick="loadCarForm()">Új céges autó</a>
+        <a href="#" onclick="loadStats()">Statisztika</a>
+        <a href="#" onclick="loadWorkplaceSafety()">Munkavédelmi szabályzat</a>
+        <div class="animation start-home"></div>
+</nav>
