--- a/public/pages/car-form.html
+++ b/public/pages/car-form.html
@@ -1,18 +1,20 @@
-<form>
-        <div class="form-input">
-                <label for="name">Név:</label>
-                <input type="text" id="name">
-        </div>
+<div class="createUser-box">
+        <h2>Új céges autó</h2>
+        <form>
+                <div class="user-box">
+                        <label for="name">Név:</label>
+                        <input type="text" id="name">
+                </div>
 
-        <div class="form-input">
-                <label for="color">Szín:</label>
-                <input type="text" id="color">
-        </div>
+                <div class="user-box">
+                        <label for="color">Szín:</label>
+                        <input type="text" id="color">
+                </div>
 
-        <div class="form-input">
-                <label for="licensePlate">Rendszám:</label>
-                <input type="text" id="licensePlate">
-        </div>
-</form>
-
-<button onclick="saveCar()">Mentés</button>
+                <div class="user-box">
+                        <label for="licensePlate">Rendszám:</label>
+                        <input type="text" id="licensePlate">
+                </div>
+                <button onclick="saveCar()">Mentés</button>
+        </form>
+</div>
