--- a/public/pages/user-list.html
+++ b/public/pages/user-list.html
@@ -1,6 +1,4 @@
-<h2>Felhasználók</h2>
-
-<table id="user-list">
+<table id="user-list", class="styled-table">
         <tr>
                 <th>#</th>
                 <th>Név</th>
