--- a/public/pages/workplaceSafety.html
+++ b/public/pages/workplaceSafety.html
@@ -1,7 +1,5 @@
 <body>
-        <h2>Munkavédelmi Szabályzat</h2>
-        
-        <table>
+        <table class="styled-table">
                 <thead>
                         <tr>
                                 <th>Pont</th>
